# WSF

./: .gitignore  Doxyfile  Makefile.am  Makefile.in  MeltWSF.cpp  MiniWSF.cpp  WGMPack.cpp  WGMPack.h  WGMPickDlg.cpp  WGMPickDlg.h  WSFComp.c  WSFComp.h  WSFDoc.h  WSFGlob.h  WSFLoaders.cpp  WSFLoadersV1.cpp  WSFMod.cpp  WSFMod.h  WSFModV1.cpp  WSFModV1.h  WSFOgg.cpp  WSFPack.cpp  WSFPack.h  WSFPackV1.cpp  WSFPackV1.h  WSFSets.cpp  WSFSets.h  WSFSpecialTags.cpp  WSFSpecialTags.h  WSFTool.cpp  WSFTool.h  WSFToolMisc.cpp  lzoconf.h  readme.md  res.aps  res.rc  resource.h  wsf.dsp  wsf.dsw  wsf.ncb  (+2 more)
docs/html/: _melt_w_s_f_8cpp.html  _melt_w_s_f_8cpp.js  _mini_w_s_f_8cpp.html  _mini_w_s_f_8cpp.js  _w_g_m_pack_8cpp.html  _w_g_m_pack_8cpp.js  _w_g_m_pack_8h.html  _w_g_m_pack_8h.js  _w_g_m_pack_8h_source.html  _w_g_m_pick_dlg_8cpp.html  _w_g_m_pick_dlg_8cpp.js  _w_g_m_pick_dlg_8h.html  _w_g_m_pick_dlg_8h.js  _w_g_m_pick_dlg_8h_source.html  _w_s_f_comp_8c.html  _w_s_f_comp_8c.js  _w_s_f_comp_8h.html  _w_s_f_comp_8h.js  _w_s_f_comp_8h_source.html  _w_s_f_doc_8h.html  _w_s_f_doc_8h_source.html  _w_s_f_glob_8h.html  _w_s_f_glob_8h.js  _w_s_f_glob_8h_source.html  _w_s_f_loaders_8cpp.html  _w_s_f_loaders_8cpp.js  _w_s_f_mod_8cpp.html  _w_s_f_mod_8cpp.js  _w_s_f_mod_8h.html  _w_s_f_mod_8h.js  _w_s_f_mod_8h_source.html  _w_s_f_mod_v1_8h_source.html  _w_s_f_ogg_8cpp.html  _w_s_f_ogg_8cpp.js  _w_s_f_pack_8cpp.html  _w_s_f_pack_8cpp.js  _w_s_f_pack_8h.html  _w_s_f_pack_8h.js  _w_s_f_pack_8h_source.html  _w_s_f_pack_v1_8h_source.html  (+180 more)
wsflib/: WSFLib.cpp  wsflib.def  wsflib.dsp  wsflib.plg
(+70 files in other folders)
